--- a/create-a-to-do-list-app-with-html-css-ja.mdx
+++ b/create-a-to-do-list-app-with-html-css-ja.mdx
@@ -2,7 +2,7 @@
 title: Create a To-Do List App with HTML, CSS, and JavaScript
 author: Tanisha Sharma
 uid: 0UmUVZhNNjX6j6GKLr9GHu85vY13
-datePublished: 2024-01-04
+datePublished: 2024
 description: Use HTML, CSS, and JavaScript to build a To-Do
 published: live
 
@@ -567,25 +567,3 @@ Now, let's check out our completed application:
   alt="Finished ToDo List app"
 />
 
-## Conclusion
-
-Congratulations! You did it! 🎊
-
-In this project tutorial, we learned to build a simple todo application using JavaScript. We were able to add, complete, edit, and delete tasks.
-
-Challenge yourself to add more advanced features to your todo application. Here is a list  of possible features to give you a few ideas:
-
-- Sign-in and Sign-up
-- Save user history when signed in or save to local storage.
-- Date and time task was added.
-- Delete all items.
-- A trash page of deleted items.
-- Success notifications for completed, edited and deleted task. 
-- Show completed tasks, all tasks, active tasks.
-
-### More Resources
-
-- [Project source code](https://github.com/codedex-io/projects/tree/main/projects/create-a-to-do-list-app-with-html-css-js/todo-list-project)
-- [The Origins I: HTML](https://www.codedex.io/html)
-- [The Origins II: CSS](https://www.codedex.io/css)
-- [The Origins III: JS](https://www.codedex.io/javascript)
