--- a/create-a-to-do-list-app-with-html-css-ja.mdx
+++ b/create-a-to-do-list-app-with-html-css-ja.mdx
@@ -27,7 +27,7 @@ published: live
 
 Tired of your "to-do" list looking more like a "to-don't" list? Today's the day we flip the script! We're turning your to-dos into to-dones!
 
-Follow along with this tutorial as we work together to check off every incomplete task on our to-do list using HTML, CSS, and JavaScript. By the end of the tutorial, you'll be able to ADD, DELETE, EDIT, and most importantly COMPLETE tasks.
+We work together to check off every incomplete task on our to-do list using HTML, CSS, and JavaScript. By the end , you'll be able to ADD, DELETE, EDIT, and most importantly COMPLETE tasks.
 
 Here are the following features you will need to complete:
 
@@ -48,7 +48,7 @@ Let's do this!
 
 ## Getting Started
 
-Let's set up our editor. For this application, we will be using our PC terminal and [Visual Studio Code](https://code.visualstudio.com) (VS Code). If you prefer an online editor such as Codédex Builds, you are more than welcome to do so.
+Let's set up our editor. For this application, we will be using our PC terminal and [Visual Studio Code](https://code.visualstudio.com) (VS Code).
 
 First, we need to create a directory and files for our project using the terminal. Once you open the terminal, cd into your *Desktop. This is where we will add our directory. You can name it anything you like but to make it easier, let's name it **todo-list-project*:
 
